Fix padding, margin and spacing on small devices

--- a/style.css
+++ b/style.css
@@ -481,7 +481,8 @@ body.dark__mode ul li {
     background: #370665;
 }
 
-.arrival__card p, .arrival__card ul li{
+.arrival__card p,
+.arrival__card ul li {
     color: white;
 }
 
@@ -806,7 +807,7 @@ body.dark__mode ul li {
 .offer__container__right__bottom__btns {
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 12px;
     padding-top: 60px;
 }
 
@@ -861,6 +862,8 @@ body.dark__mode ul li {
 .accessories__container__item {
     border-radius: 25px;
     max-width: 320px;
+    border: 2px solid #FFF;
+    overflow: hidden;
 }
 
 .accessories__container__items {
@@ -1036,7 +1039,8 @@ body.dark__mode ul li {
     }
 
     .upper__container__bottom__right {
-        margin-left: -187px;
+        margin-left: 288px;
+        margin-top: 40px;
     }
 
     .hide__on__small {
@@ -1081,7 +1085,7 @@ body.dark__mode ul li {
     .upper__container__middle__btn__shopnow,
     .upper__container__middle__btn__addtocart {
         font-size: 12px;
-        padding: 9px 40px;
+        padding: 9px 36px;
         height: 48px;
     }
 
@@ -1105,6 +1109,41 @@ body.dark__mode ul li {
     .upper__container__input img {
         left: 12px;
         top: 13px;
+    }
+
+    .upper__container__bottom__right__item {
+        position: relative;
+        width: 250px;
+        height: 128px;
+        border-radius: 25px;
+        border: 1px solid rgba(0, 0, 0, 0.12);
+        background: rgba(40, 40, 40, 0.70);
+        backdrop-filter: blur(15px);
+        color: white;
+    }
+
+    .upper__container__bottom__right__item__info__name {
+        font-size: 16px;
+    }
+
+    .upper__container__bottom__right__item img {
+        position: absolute;
+        top: -14%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    .upper__container__bottom__right__item__info__price {
+        top: -17px;
+        position: relative;
+    }
+
+    .new__price {
+        font-size: 16px;
+    }
+
+    .old__price {
+        font-size: 12px;
     }
 
 
@@ -1131,7 +1170,41 @@ body.dark__mode ul li {
     .arrival__container {
         overflow: hidden;
         width: 100%;
-        padding-left: 18px;
+        padding-left: 0px;
+    }
+
+    .popular__trend__container__items {
+        gap: 15px;
+    }
+
+
+    .card {
+        min-width: 298px;
+    }
+
+    .card__addtocart {
+        width: 129px;
+        height: 43px;
+        font-size: 14px;
+        padding-right: 1px;
+        padding-left: 5px;
+    }
+
+    .card__addtocart img {
+        width: 18px;
+        height: 18px;
+        padding: 0;
+        margin: 0;
+    }
+
+    .card__bottom__btns {
+        gap: 0;
+    }
+
+    .card__buy {
+        width: 131px;
+        height: 48px;
+        font-size: 18px;
     }
 
     .popular__trend__container__items {
@@ -1234,7 +1307,7 @@ body.dark__mode ul li {
     }
 
     .footer__container__copyright {
-        padding-top: 340px;
+        padding-top: 353px;
         padding-bottom: 8px;
     }
 
@@ -1248,11 +1321,11 @@ body.dark__mode ul li {
     .footer__container__item__logo {
         left: 50%;
         transform: translateX(-50%);
-        top: 1873px;
+        top: 1921px;
     }
 
     .footer__container__newsletter {
-        top: 1714px;
+        top: 1764px;
         left: 50%;
         transform: translateX(-50%);
     }
